changes to padding on mobile menu button and images, home link to Hangry fixed, Noodles' open  on about page

--- a/wp-content/themes/tjarksandtjarks/style.css
+++ b/wp-content/themes/tjarksandtjarks/style.css
@@ -1,30 +1,3 @@
-/*------------------------------*/
-
-
-/*       COLOR VARIABLES        */
-
-
-/*------------------------------*/
-
-
-/*------------------------------*/
-
-
-/*       FONT FAMILY            */
-
-
-/*------------------------------*/
-
-
-/*------------------------------*/
-
-
-/*       TYPOGRAPHY             */
-
-
-/*------------------------------*/
-
-
 /*-------------------------------
         CSS Contents
 
@@ -313,7 +286,7 @@ p {
 }
 
 .mobile-container {
-    padding: 20px 40px;
+    padding: 5px 10px;
 }
 
 
@@ -351,8 +324,8 @@ p {
 
 .all-workBtn {
     width: 100%;
-    height: 80px;
-    padding: 40px;
+    /*height: 80px;*/
+    padding: 20px;
     margin-top: 20px;
     background: #f2f2f2;
     text-align: center;
